main.scss
//@import 'colors-module/main';
$ftFooterSpacingUnit: 10px;

// TODO: Remove these and use Velcro/colors-module instead
$ftColor-Tint1: #f6e9d8;
$ftColor-Tint2: #e9decf;
$ftColor-DarkDarkGrey: #333333;


$ft-header-img-root: '/img' !default;

.ft-header-module {
	margin-bottom: 10px;
	min-height: 77px;
}

.ft-header-nav-bar{
   	height: 50px;
   	background-color: $ftColor-DarkDarkGrey;
}

.ft-header-logo {
	display: block;
	padding: 11px 0 31px;
	width: 82px;
	height: 35px;
	background: #ffe2c6; /* Old browsers */
	background: -moz-linear-gradient(top,  #ffe2c6 0%, #f7d8b9 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffe2c6), color-stop(100%,#f7d8b9)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #ffe2c6 0%,#f7d8b9 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #ffe2c6 0%,#f7d8b9 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #ffe2c6 0%,#f7d8b9 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #ffe2c6 0%,#f7d8b9 100%); /* W3C */
}

.lt-ie9 .ft-header-logo {
	background: url(#{$ft-header-img-root}ft-logo.gif) no-repeat;
}

.ft-header-logo .ft-initials {
	height: 35px;
	fill: $ftColor-DarkDarkGrey;
}

